styling for button press; function to check winner

--- a/src/styles/RollButton.css
+++ b/src/styles/RollButton.css
@@ -15,3 +15,7 @@
     color: #FFFFFF;
     cursor: pointer;
 }
+
+.button--roll:active {
+    box-shadow: inset 3px 3px 8px -3px rgba(0, 0, 0, 0.7);
+}
