--- a/src/styles/RollButton.css
+++ b/src/styles/RollButton.css
@@ -3,8 +3,7 @@
 }
 
 .button--roll {
-    width: 92px;
-    height: 36px;
+    padding: 10px 30px;
     background: #5035FF;
     box-shadow: 0px 3.2px 7.68px rgba(0, 0, 0, 0.18);
     border-radius: 3.81277px;
