--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    margin: 30px 20px;
+    margin: 30px auto;
     padding: 34px;
     background: #F5F5F5;
     border-radius: 10px;
@@ -7,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 320px;
 }
 
 .confetti {
